# TP-project-game

./: README.md  compile-and-run.sh  compile-game.sh  compile_and_run.sh  compile_game.sh  compile_tests.sh  run-game.sh  run_game.sh  run_tests.sh
compile-files/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  game
compile_files/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  game
documentation/: game-description.md  game-description.txt  gameplay_description.md  technical-doc.md  technical-doc.txt  technical_ documentation.md
logs/: game_logs.txt
source-files/: main.cpp
source-files/modules/enemy_units_factories/: enemy_units_factories.cpp  enemy_units_factories.h
source-files/modules/game/: game.cpp  game.h
source-files/modules/geometry/: geometry.cpp
source-files/modules/units/: units.cpp  units.h
source-files/modules/units_factories/: units_factories.cpp  units_factories.h
source-files/modules/window/: window.cpp  window.h
source-files/settings/: units_settings.h  window_settings.h
source_files/: main.cpp
source_files/modules/: bullet.cpp  controller.cpp  enemy_movement_decorator.cpp  enemy_super_attack_decorator.cpp  enemy_unit_decorator.cpp  enemy_units.cpp  enemy_units_booster.cpp  game.cpp  game_proxy.cpp  geometry.cpp  hero_unit.cpp  hero_unit_attack_module.cpp  logging_module.cpp  text_helper.cpp  units.cpp  units_factories.cpp  window.cpp
source_files/modules/game/: game.cpp  game.h
source_files/modules/geometry/: geometry.h
source_files/modules/headers/: bullet.h  classes.h  controller.h  enemy_units.h  enemy_units_booster.h  enemy_units_decorators.h  game.h  game_proxy.h  geometry.h  hero_unit.h  hero_unit_attack_module.h  logging_module.h  text_helper.h  units.h  units_factories.h  window.h
source_files/modules/units/: units.cpp  units.h
source_files/modules/units_factories/: units_factories.h
source_files/modules/window/: window.cpp  window.h
source_files/settings/: game_settings.h  math_settings.h  technical_settings.h  units_settings.h  window_settings.h
test_files/: CMakeLists.txt  tests.cpp
test_files/compile_files/: CMakeLists.txt
test_files/modules/: fake_controller.cpp
test_files/modules/headers/: testing_module.h
test_files/tests/: game_module_tests.cpp  tests.cpp
testing_files/compile_files/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
testing_files/modules/: fake_controller.cpp  testing_module.cpp
testing_files/modules/headers/: fake_controller.h  testing_module.h
testing_files/tests/: bullets_module_tests.cpp  enemy_units_booster_tests.cpp  enemy_units_decorators_tests.cpp  enemy_units_tests.cpp  game_module_tests.cpp  game_proxy_tests.cpp  geometric_module_tests.cpp  hero_unit_attack_module_tests.cpp  hero_unit_module_tests.cpp  hero_unit_tests.cpp  logging_module_tests.cpp  text_helper_tests.cpp  units_factories_module_tests.cpp  units_factories_tests.cpp  units_tests.cpp
